[package]
name = "qk-proxy-rs"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

[[bin]]
name="client"
path="./src/client.rs"

[[bin]]
name="server"
path="./src/server.rs"

[dependencies]
packet-toolbox-rs = {path="../packet-toolbox-rs"}
actix = "0.7"
tokio = "0.1"
byteorder = "1.3.1"
bytes = "0.4"
uuid = "0.7"
quinn = "0.2"
rustls = { version = "0.15", features = ["quic","dangerous_configuration"] }
futures = "0.1"
url = "1.7"
webpki = "0.19"
failure = "0.1"
directories = "1.0.2"
rcgen = "0.2"
slog = "2.4.1"
slog-async = "2.3.0"
slog-term = "2.4.0"
structopt = "0.2"
tokio-current-thread = "0.1.4"
ring = "0.14.6"