[package]
name = "just-proxy-lib"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

[lib]
name = "just_proxy_lib"

[dependencies]
actix = "0.8"
tokio = { version = "0.1", features = ["async-await-preview"] }
trust-dns-resolver = "0.11.0"
byteorder = "1.3.1"
bytes = "0.4"
uuid = "0.7"
quinn = { version = "0.3.0" }
rustls = { version = "0.15", features = ["quic","dangerous_configuration"] }
futures = "0.1"
url = "1.7"
webpki = "0.19"
failure = "0.1"
directories = "1.0.2"
rcgen = "0.2"
slog = "2.4.1"
slog-async = "2.3.0"
slog-term = "2.4.0"
structopt = "0.2"
tokio-current-thread = "0.1.4"
ring = "0.14.6"
serde = { version = "1.0", features = ["derive"] }